<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Strings -->
    <string name="app_name">Dice Detector</string>

    
    <!--  MainActivity Strings -->
    <string name="text_detected_dice">Detected Dice!</string>
    <string name="item_accept">Accept</string>
    <string name="item_retry">Retry</string>
    
    <!--  MainActivity Menu Strings -->
    <string name="item_settings">Settings</string>
    <string name="item_cancel">Cancel</string>
    <string name="item_preview_resolution">Preview Resolutions</string>
    <string name="item_filter_mode">Filter Modes</string>
    <string name="item_filter_color">Filter by Color</string>
    <string name="item_filter_color_descrpt">Filter by Colors</string>
    <string name="item_filter_color_no">No Color Filtering</string>
    <string name="item_filter_out_dark">Filter Dark</string>
    <string name="item_filter_out_dark_descrpt">Filter out Dark Colors</string>
    <string name="item_filter_out_bright">Filter Bright</string>
    <string name="item_filter_out_bright_descrpt">Filter out Bright Colors</string>
    <string name="item_filter_noise">Filter Noise</string>
    <string name="item_filter_noise_descrpt">Filter out Noise</string>
    <string name="item_detection_method">Detection Method</string>
    <string name="item_hough_method">Hough Detection</string>
    <string name="item_hough_method_descrpt">Hough Detection</string>
    <string name="item_contour_method">Contour Detection</string>
	<string name="item_contour_method_descrpt">Contour Detection</string>
    <string name="item_view_mode">View Mode</string>
    <string name="item_normal_view_mode">Normal Mode</string>
    <string name="item_normal_view_mode_descrpt">RGBA Mode</string>
    <string name="item_detection_view_mode">Detection Mode</string>
    <string name="item_detection_view_mode_descrpt">The filtered image\nused for detection</string>
    
    
    <!--  UIActivity Strings -->
    <string name="last_roll">Last Roll</string>
    <string name="aces">Aces</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="total">Total Score</string>
    <string name="bonus">Bonus</string>
    <string name="upper">Upper Total</string>
    <string name="kind3">\t\t3 of a Kind</string>
    <string name="kind4">\t\t4 of a Kind</string>
    <string name="fullHouse">\t\tFull House</string>
    <string name="smStraight">\t\tSm. Straight</string>
    <string name="lgStraight">\t\tLg. Straight</string>
    <string name="chance">\t\tChance</string>
    <string name="yahtzee">\t\tYahtzee</string>
    <string name="lower">\t\tLower Total</string>
    <string name="grand">\t\tGrand Total: </string>
    <string name="button_detect_dice">Detect Dice!</string>  


    

</resources>
