<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dicedetectorapp.MainActivity" >

    <item
        android:id="@+id/item_settings"
        android:orderInCategory="100"
        android:title="@string/item_settings"
        android:showAsAction="always" />
    	<menu>
    	    <item
    	        android:id="@+id/item_preview_resolution"
    	        android:title="@string/item_preview_resolution"
    	        android:showAsAction="always">
    	        <menu>
    	            <!-- Filled Programmically, placeholder required -->
    	            <item
    	                android:id="@+id/placeholderItem">
    	            </item>
    	        </menu>
    	    </item>
    	    <item 
    	        android:id="@+id/item_filter_mode"
    	        android:title="@string/item_filter_mode"
    	        android:showAsAction="always">
    	        <menu>
    	            <group
    	                android:id="@+id/group_filter_mode">
    	                <item
    	                    android:id="@+id/item_filter_color"
    	                    android:title="@string/item_filter_color" 
    	                    android:contentDescription="@string/item_filter_color_descrpt">
    	                    <menu>
    	                        <group
    	                            android:id="@+id/group_filter_color_mode"
    	                        	android:checkableBehavior="single">
    	                        	<item
    	                        	    android:id="@+id/item_filter_out_dark"
    	                        	    android:title="@string/item_filter_out_dark"
    	                        	    android:contentDescription="@string/item_filter_out_dark_descrpt" 
    	                        	    android:checked="false"
    	                        	    android:onClick="onOptionsItemSelected">
    	                        	</item>
    	                        	<item
    	                        	    android:id="@+id/item_filter_out_bright"
    	                        	    android:title="@string/item_filter_out_bright"
    	                        	    android:contentDescription="@string/item_filter_out_bright_descrpt" 
    	                        	    android:checked="false"
    	                        	    android:onClick="onOptionsItemSelected">
    	                        	</item>
    	                        	<item 
    	                        	    android:id="@+id/item_filter_color_no"
    	                        	    android:title="@string/item_filter_color_no"
    	                        	    android:checked="true"
    	                        	    android:onClick="onOptionsItemSelected">
    	                        	</item>
    	                    	</group>
    	                    </menu>
    	                </item>
    	                <item
    	                    android:id="@+id/item_filter_noise"
    	                    android:title="@string/item_filter_noise"
    	                    android:contentDescription="@string/item_filter_noise_descrpt" 
    	                    android:checkable="true"
    	                    android:checked="true">
    	                </item>
    	            </group>
    	        </menu>
    	    </item>
    	    <item 
    	        android:id="@+id/item_detection_method"
       			android:title="@string/item_detection_method"
       			android:showAsAction="always">
    	        <menu>
    	            <group 
    	            	android:id="@+id/group_detection_method"
    	            	android:checkableBehavior="single" >
	    	            <item
	    	                android:id="@+id/item_contour_method"
	    	                android:title="@string/item_contour_method"
	    	                android:contentDescription="@string/item_contour_method_descrpt"
	    	           		android:checked="true">
	    	            </item>
	    	            <item
	    	                android:id="@+id/item_hough_method"
	    	                android:title="@string/item_hough_method"
	    	                android:contentDescription="@string/item_hough_method_descrpt"
	    	           		android:checked="false">
	    	            </item>
	    	        </group>
    	        </menu>
    	    </item>
    	    <item 
    	        android:id="@+id/item_view_mode"
    	        android:title="@string/item_view_mode"
    	        android:showAsAction="always">
    	        <menu>
    	            <group
    	                android:id="@+id/group_view_mode"
    	                android:checkableBehavior="single">
    	                <item
    	                    android:id="@+id/item_normal_view_mode"
    	                    android:title="@string/item_normal_view_mode"
    	                    android:contentDescription="@string/item_normal_view_mode_descrpt"
    	                    android:checked="true">
    	                </item>
    	                <item
    	                    android:id="@+id/item_detection_view_mode"
    	                    android:title="@string/item_detection_view_mode"
    	                    android:contentDescription="@string/item_detection_view_mode_descrpt"
    	                    android:checked="false">
    	                </item>
    	            </group>
    	        </menu>
    	    </item>
    	</menu>
    <item
        android:id="@+id/item_cancel"
        android:showAsAction="always"
        android:title="@string/item_cancel">
    </item>
</menu>
