<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_felt"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".YahtzeeActivity" xmlns:app="http://schemas.android.com/apk/res/com.example.dicedetectorapp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/last_roll"/>
    
    <Button
        android:id="@+id/button_detect_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LastRoll"
        android:layout_alignRight="@+id/LastRoll"
        android:layout_below="@+id/LastRoll"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/button_detect_dice" />
    
    <LinearLayout
        android:id="@+id/LastRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" >

        <ImageButton
            android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" 
            android:src="@drawable/dice1" />

        <ImageButton
            android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ImageButton01"
            android:layout_toRightOf="@+id/ImageButton01"
            android:src="@drawable/dice2" />

        <ImageButton
            android:id="@+id/dice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton1"
            android:layout_toRightOf="@+id/imageButton1"
            android:src="@drawable/dice3" />

        <ImageButton
            android:id="@+id/dice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ImageButton02"
            android:layout_toRightOf="@+id/ImageButton02"
            android:src="@drawable/dice4" />

        <ImageButton
            android:id="@+id/dice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ImageButton03"
            android:layout_toRightOf="@+id/ImageButton03"
            android:src="@drawable/dice5" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grandTotal"
        android:layout_centerHorizontal="true" >

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="324dp"
            app:columnCount="4" >

            <TextView
                android:id="@+id/acesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="0"
                android:text="@string/aces" />

            <Button
                android:id="@+id/acesButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="1"
                app:layout_gravity="left|top"
                app:layout_row="0"
                android:enabled="true"
                android:onClick="onClick"
                android:textSize="15sp"
                android:text="0" />

            <TextView
                android:id="@+id/twoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="1"
                android:text="@string/twos" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="1"
                app:layout_gravity="left|top"
                app:layout_row="1"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />
            
            <TextView
                android:id="@+id/threeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="2"
                android:text="@string/threes" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="1"
                app:layout_gravity="left|top"
                app:layout_row="2"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />
            
            <TextView
                android:id="@+id/fourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="3"
                android:text="@string/fours" />

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="1"
                app:layout_gravity="left|top"
                app:layout_row="3"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0" 
                android:onClick="onClick"/>
            
            <TextView
                android:id="@+id/fiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="4"
                android:text="@string/fives" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="1"
                app:layout_gravity="left|top"
                app:layout_row="4"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0" 
                android:onClick="onClick"/>
            
            <TextView
                android:id="@+id/sixText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="5"
                android:text="@string/sixes" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="1"
                app:layout_gravity="left|top"
                app:layout_row="5"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0" 
                android:onClick="onClick"/>
                        
            <TextView
                android:id="@+id/topScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="1"
                app:layout_gravity="center"
                app:layout_row="6"
                android:text="" />
            
            <TextView
                android:id="@+id/bonusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="7"
                android:text="@string/bonus" />
                        
            <TextView
                android:id="@+id/bonusTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="1"
                app:layout_gravity="center"
                app:layout_row="7"
                android:text="" />
            
            <TextView
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_gravity="left|center_vertical"
                app:layout_row="8"
                android:text="@string/upper" />
                        
            <TextView
                android:id="@+id/topTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="1"
                app:layout_gravity="center"
                app:layout_row="8"
                android:text="" />
            
            <TextView
                android:id="@+id/kind3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="0"
                android:text="@string/kind3" />

           <Button
                android:id="@+id/kind3Button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="0"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />
           
           <TextView
                android:id="@+id/kind4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="1"
                android:text="@string/kind4" />

           <Button
                android:id="@+id/kind4Button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="1"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />
           
           <TextView
                android:id="@+id/fullHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="2"
                android:text="@string/fullHouse" />

           <Button
                android:id="@+id/fullHouseButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="2"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />
           
           <TextView
                android:id="@+id/smStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="3"
                android:text="@string/smStraight" />

           <Button
                android:id="@+id/smStrButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="3"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0" 
                android:onClick="onClick"/>
           
           <TextView
                android:id="@+id/lgStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="4"
                android:text="@string/lgStraight" />

           <Button
                android:id="@+id/lgStrButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="4"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0" 
                android:onClick="onClick"/>
           
           <TextView
                android:id="@+id/yahtzee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="5"
                android:text="@string/yahtzee" />

           <Button
                android:id="@+id/yahtzeeButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="5"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />

           <Button
                android:id="@+id/chanceButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:layout_column="3"
                app:layout_gravity="left|top"
                app:layout_row="6"
                android:enabled="true"
                android:textSize="15sp"
                android:text="0"
                android:onClick="onClick" />
           
           <TextView
                android:id="@+id/lowerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_gravity="left|center_vertical"
                app:layout_row="7"
                android:text="@string/lower" />
                        
           <TextView
                android:id="@+id/lowerTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="3"
                app:layout_gravity="center"
                app:layout_row="7"
                android:text="" />

           <TextView
               android:id="@+id/topText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_column="0"
               app:layout_gravity="left|center_vertical"
               app:layout_row="6"
               android:text="@string/total" />

           <TextView
               android:id="@+id/chance"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_column="2"
               app:layout_gravity="left|center_vertical"
               app:layout_row="6"
               android:text="@string/chance" />
            
        </android.support.v7.widget.GridLayout>
        
    </ScrollView>

    <TextView
        android:id="@+id/grandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/grandTotalText"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/grandTotalText"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/grandTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/grand"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>